# browser-agent-locater-

./: .env.example  .gitignore  README.md  package.json  tsconfig.base.json
scripts/: setup.mjs
services/vision-service/: nixpacks.toml  pyproject.toml  railway.toml
services/vision-service/src/vision_service/: main.py
services/vision-service/src/vision_service/models/: requests.py  responses.py
services/vision-service/src/vision_service/providers/: base.py  claude.py  openai_gpt4v.py
services/vision-service/src/vision_service/routers/: trajectory.py  vision.py
services/vision-service/src/vision_service/trajectory/: logger.py  schema.py
services/vision-service/tests/: test_providers.py  test_trajectory_logger.py  test_vision_router.py
